fix: grid generation; add: grid spec

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -11,12 +11,13 @@
   <script type="text/javascript" src="lib/jasmine-1.1.0/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="spec/SpecHelper.js"></script>
-  <script type="text/javascript" src="spec/PlayerSpec.js"></script>
+  <script type="text/javascript" src="../src/PathFinding.js"></script>
+  <script type="text/javascript" src="../src/core/Node.js"></script>
+  <script type="text/javascript" src="../src/core/Grid.js"></script>
+  <script type="text/javascript" src="../src/core/BaseFinder.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="src/Player.js"></script>
-  <script type="text/javascript" src="src/Song.js"></script>
+  <script type="text/javascript" src="spec/core.grid.js"></script>
 
   <script type="text/javascript">
     (function() {
