add: tests for core/BaseFinder.js

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -18,6 +18,7 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/core.grid.js"></script>
+  <script type="text/javascript" src="spec/core.basefinder.js"></script>
 
   <script type="text/javascript">
     (function() {
