--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -11,14 +11,20 @@
   <script type="text/javascript" src="lib/jasmine-1.1.0/jasmine-html.js"></script>
 
   <!-- include source files here... -->
+  <!-->core</!-->
   <script type="text/javascript" src="../src/PathFinding.js"></script>
   <script type="text/javascript" src="../src/core/Node.js"></script>
   <script type="text/javascript" src="../src/core/Grid.js"></script>
   <script type="text/javascript" src="../src/core/BaseFinder.js"></script>
 
+  <!-->modules</!-->
+  <script type="text/javascript" src="../src/modules/AStar.js"></script>
+
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/core.grid.js"></script>
-  <script type="text/javascript" src="spec/core.basefinder.js"></script>
+  <script type="text/javascript" src="spec/core.Grid.js"></script>
+  <script type="text/javascript" src="spec/core.BaseFinder.js"></script>
+  <script type="text/javascript" src="spec/modules.TestFramework.js"></script>
+  <script type="text/javascript" src="spec/modules.AStar.js"></script>
 
   <script type="text/javascript">
     (function() {
