--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -23,7 +23,8 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/core.Grid.js"></script>
   <script type="text/javascript" src="spec/core.BaseFinder.js"></script>
-  <script type="text/javascript" src="spec/modules.TestFramework.js"></script>
+  <script type="text/javascript" src="spec/modules.basicTest.js"></script>
+  <script type="text/javascript" src="spec/modules.pathTest.js"></script>
   <script type="text/javascript" src="spec/modules.AStar.js"></script>
 
   <script type="text/javascript">
