--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -18,12 +18,14 @@
   <script type="text/javascript" src="../src/core/BaseFinder.js"></script>
 
   <!-->modules</!-->
+  <script type="text/javascript" src="../src/modules/Heap.js"></script>
   <script type="text/javascript" src="../src/modules/AStar.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/core.Grid.js"></script>
   <script type="text/javascript" src="spec/core.BaseFinder.js"></script>
   <script type="text/javascript" src="spec/modules.BasicTest.js"></script>
+  <script type="text/javascript" src="spec/modules.Heap.js"></script>
   <script type="text/javascript" src="spec/modules.PathTest.js"></script>
   <script type="text/javascript" src="spec/modules.AStar.js"></script>
 
