fix: document styles

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -26,6 +26,7 @@
   <script type="text/javascript" src="spec/core.BaseFinder.js"></script>
   <script type="text/javascript" src="spec/modules.BasicTest.js"></script>
   <script type="text/javascript" src="spec/modules.Heap.js"></script>
+  <script type="text/javascript" src="spec/modules.PathTestCases.js"></script>
   <script type="text/javascript" src="spec/modules.PathTest.js"></script>
   <script type="text/javascript" src="spec/modules.AStar.js"></script>
 
