add: colorization for demo page

--- a/visual/index.html
+++ b/visual/index.html
@@ -5,8 +5,8 @@
     <title>PathFinding.js</title>
     <link rel="stylesheet" href="./main.css" />
 
-    <script type="text/javascript" src='./jquery-1.6.4.min.js'></script>
-    <script type="text/javascript" src="./raphael-min.js"></script>
+    <script type="text/javascript" src='./lib/jquery-1.6.4.min.js'></script>
+    <script type="text/javascript" src="./lib/raphael-min.js"></script>
 
     <script type="text/javascript" src="../build/PathFinding.min.js"></script>
     <script type="text/javascript" src="./main.js"></script>
