add: test for BFS

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -19,6 +19,7 @@
 
   <script type="text/javascript" src="../src/modules/Heap.js"></script>
   <script type="text/javascript" src="../src/modules/AStar.js"></script>
+  <script type="text/javascript" src="../src/modules/BreadthFirst.js"></script>
 
 
   <!-- include spec files here... -->
@@ -28,6 +29,7 @@
   <script type="text/javascript" src="spec/modules.PathTestCases.js"></script>
   <script type="text/javascript" src="spec/modules.PathTest.js"></script>
   <script type="text/javascript" src="spec/modules.AStar.js"></script>
+  <script type="text/javascript" src="spec/modules.BreadthFirst.js"></script>
 
   <script type="text/javascript">
     (function() {
