--- a/visual/index.html
+++ b/visual/index.html
@@ -4,20 +4,41 @@
     <meta charset="UTF-8">
     <title>PathFinding.js</title>
     <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./lib/themes/vader/jquery.ui.all.css" />
 
-    <script type="text/javascript" src='./lib/jquery-1.6.4.min.js'></script>
     <script type="text/javascript" src="./lib/raphael-min.js"></script>
+    <script type="text/javascript" src="./lib/jquery-1.6.4.min.js"></script>
+
+    <script type="text/javascript" src="./lib/ui/jquery.ui.core.min.js"></script>
+    <script type="text/javascript" src="./lib/ui/jquery.ui.widget.min.js"></script>
+    <script type="text/javascript" src="./lib/ui/jquery.ui.mouse.min.js"></script>
+    <script type="text/javascript" src="./lib/ui/jquery.ui.draggable.min.js"></script>
+    <script type="text/javascript" src="./lib/ui/jquery.ui.accordion.min.js"></script>
 
     <script type="text/javascript" src="../build/PathFinding.min.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
-    <div id="wrapper">
-        <header>
-            <h1 id="title">PathFinding.js</h1>
-        </header>
-        <div id="draw_area"></div>
-        <div id="control_panel"></div>
+    <div id="draw_area"></div>
+
+    <div id="control_panel">
+        <header><h2>Select Algorithm</h2></header>
+
+        <div class="accordion">
+            <h3><a href="#">A*</a></h3>
+            <section id="astar_section" class="finder_section">
+                <section id="astar_options" class="sub_options">
+                    <input type="radio" name="astar_option" value="manhattan"/>Manhattan <br>
+                    <input type="radio" name="astar_option" value="euclidean"/>Euclidean <br>
+                    <input type="radio" name="astar_option" value="chebyshev"/>Chebyshev <br>
+                </section>
+            </section>
+
+            <h3><a href="#">Breadth-First-Search</a></h3>
+            <section id="breadthfirst_section" class="finder_section">
+                <input type="radio" name="finder" value="breadthfirst"/>Breadth First Search <br>
+            </section>
+        </div>
     </div>
 </body>
 </html>
