mod: css for accordion

--- a/visual/index.html
+++ b/visual/index.html
@@ -22,13 +22,13 @@
     <div id="draw_area"></div>
 
     <div id="control_panel">
-        <header><h2>Select Algorithm</h2></header>
+        <header><h2 class="header_title">Select Algorithm</h2></header>
 
         <div class="accordion">
             <h3><a href="#">A*</a></h3>
             <section id="astar_section" class="finder_section">
                 <section id="astar_options" class="sub_options">
-                    <input type="radio" name="astar_option" value="manhattan"/>Manhattan <br>
+                    <input type="radio" name="astar_option" value="manhattan" checked />Manhattan <br>
                     <input type="radio" name="astar_option" value="euclidean"/>Euclidean <br>
                     <input type="radio" name="astar_option" value="chebyshev"/>Chebyshev <br>
                 </section>
