add: play panel

--- a/visual/index.html
+++ b/visual/index.html
@@ -21,7 +21,7 @@
 <body>
     <div id="draw_area"></div>
 
-    <div id="control_panel">
+    <div id="algorithm_panel" class="control_panel">
         <header><h2 class="header_title">Select Algorithm</h2></header>
 
         <div class="accordion">
@@ -36,9 +36,12 @@
 
             <h3><a href="#">Breadth-First-Search</a></h3>
             <section id="breadthfirst_section" class="finder_section">
-                <input type="radio" name="finder" value="breadthfirst"/>Breadth First Search <br>
             </section>
         </div>
+    </div>
+
+    <div id="play_panel" class="control_panel">
+        <button id="start_button">Start</button>
     </div>
 </body>
 </html>
