--- a/visual/index.html
+++ b/visual/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>PathFinding.js</title>
     <link rel="stylesheet" href="./main.css" />
-    <link rel="stylesheet" href="./lib/themes/vader/jquery.ui.all.css" />
+    <link rel="stylesheet" href="./lib/themes/jquery.ui.all.css" />
 
     <script type="text/javascript" src="./lib/raphael-min.js"></script>
     <script type="text/javascript" src="./lib/jquery-1.6.4.min.js"></script>
