add: stats to demo page

--- a/visual/index.html
+++ b/visual/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="../build/PathFinding.min.js"></script>
     <script type="text/javascript" src="./notification.js"></script>
     <script type="text/javascript" src="./grid.js"></script>
+    <script type="text/javascript" src="./panel.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
@@ -45,6 +46,9 @@
 
     <div id="play_panel" class="control_panel">
         <button id="start_button">Start</button>
+    </div>
+
+    <div id="timer">
     </div>
 </body>
 </html>
