fix: clear changedNodes in each reset

--- a/visual/index.html
+++ b/visual/index.html
@@ -46,6 +46,7 @@
 
     <div id="play_panel" class="control_panel">
         <button id="start_button">Start</button>
+        <button id="stop_button">Stop</button>
     </div>
 
     <div id="timer">
