--- a/visual/index.html
+++ b/visual/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
+    <!-- TODO: info icon and text -->
     <div id="draw_area"></div>
 
     <div id="algorithm_panel" class="control_panel">
@@ -29,7 +30,7 @@
 
         <!-- TODO: using jquery-ui's triangle image to replace radio button -->
         <div class="accordion">
-            <h3><a href="#">A*</a></h3>
+            <h3 id="astar_header"><a href="#">A*</a></h3>
             <section id="astar_section" class="finder_section">
                 <section id="astar_options" class="sub_options">
                     <input type="radio" name="astar_option" value="manhattan" checked />Manhattan <br>
@@ -38,7 +39,7 @@
                 </section>
             </section>
 
-            <h3><a href="#">Breadth-First-Search</a></h3>
+            <h3 id="breadthfirst_header"><a href="#">Breadth-First-Search</a></h3>
             <section id="breadthfirst_section" class="finder_section">
             </section>
         </div>
