--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="../src/modules/Heap.js"></script>
   <script type="text/javascript" src="../src/modules/AStar.js"></script>
   <script type="text/javascript" src="../src/modules/BreadthFirst.js"></script>
+  <script type="text/javascript" src="../src/modules/BiAStar.js"></script>
 
 
   <!-- include spec files here... -->
@@ -30,6 +31,7 @@
   <script type="text/javascript" src="spec/modules.PathTest.js"></script>
   <script type="text/javascript" src="spec/modules.AStar.js"></script>
   <script type="text/javascript" src="spec/modules.BreadthFirst.js"></script>
+  <script type="text/javascript" src="spec/modules.BiAStar.js"></script>
 
   <script type="text/javascript">
     (function() {
