--- a/visual/index.html
+++ b/visual/index.html
@@ -46,6 +46,7 @@
                 </header>
                 <div class="optional sub_options">
                     <input type="checkbox" class="allow_diagonal" checked>Allow Diagonal <br>
+                    <input type="checkbox" class="bi-directional">Bi-directional<br>
                 </div>
             </div>
 
@@ -75,6 +76,7 @@
                 </header>
                 <div class="optional sub_options">
                     <input type="checkbox" class="allow_diagonal" checked>Allow Diagonal <br>
+                    <input type="checkbox" class="bi-directional">Bi-directional<br>
                 </div>
             </div>
             
@@ -85,6 +87,7 @@
                 </header>
                 <div class="optional sub_options">
                     <input type="checkbox" class="allow_diagonal" checked>Allow Diagonal <br>
+                    <input type="checkbox" class="bi-directional">Bi-directional<br>
                 </div>
             </div>
         </div>
@@ -101,18 +104,6 @@
     <footer>
         Project Hosted on <a href="http://github.com/qiao/PathFinding.js">Github</a>
     </footer>
-
-    <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-21856083-3']);
-        _gaq.push(['_trackPageview']);
-
-        (function() {
-         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-         })();
-    </script>
 
 </body>
 </html>
