add: spec files for bi-directional breadth-first path-finder

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="../src/modules/AStar.js"></script>
   <script type="text/javascript" src="../src/modules/BreadthFirst.js"></script>
   <script type="text/javascript" src="../src/modules/BiAStar.js"></script>
+  <script type="text/javascript" src="../src/modules/BiBreadthFirst.js"></script>
 
 
   <!-- include spec files here... -->
@@ -32,6 +33,7 @@
   <script type="text/javascript" src="spec/modules.AStar.js"></script>
   <script type="text/javascript" src="spec/modules.BreadthFirst.js"></script>
   <script type="text/javascript" src="spec/modules.BiAStar.js"></script>
+  <script type="text/javascript" src="spec/modules.BiBreadthFirst.js"></script>
 
   <script type="text/javascript">
     (function() {
