add: new algorithm into demo page

--- a/visual/index.html
+++ b/visual/index.html
@@ -57,6 +57,7 @@
                 </header>
                 <div class="optional sub_options">
                     <input type="checkbox" class="allow_diagonal" checked>Allow Diagonal <br>
+                    <input type="checkbox" class="bi-directional">Bi-directional<br>
                 </div>
             </div>
             
