add: reset button

--- a/visual/index.html
+++ b/visual/index.html
@@ -97,6 +97,7 @@
     <div id="play_panel" class="control_panel">
         <button id="start_button">Start</button>
         <button id="stop_button">Stop</button>
+        <button id="reset_button">Reset</button>
     </div>
 
     <div id="timer">
