--- a/visual/index.html
+++ b/visual/index.html
@@ -33,6 +33,18 @@
     <!-- TODO: info icon and text -->
     <div id="draw_area"></div>
 
+    <div id="help_panel" class="control_panel">
+        <header>
+            <h2 class="header_title">Instructions</h2>
+            <span id="hide_instruction">hide</span>
+        </header>
+        click on the <span class="white">white</span> grids and drag your mouse to draw obstacles. <br>
+        drag <span class="green">green</span> node to set start position. <br>
+        drag <span class="red">red</span> node to set end position. <br>
+        choose algorithm from right panel. <br>
+        click start button at the lower right corner to start the animation.
+    </div>
+
     <div id="algorithm_panel" class="control_panel">
         <header><h2 class="header_title">Select Algorithm</h2></header>
 
