mod: moving heuristic functions into a separate module

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="../src/core/BaseFinder.js"></script>
 
   <script type="text/javascript" src="../src/modules/Heap.js"></script>
+  <script type="text/javascript" src="../src/modules/Heuristic.js"></script>
   <script type="text/javascript" src="../src/modules/AStar.js"></script>
   <script type="text/javascript" src="../src/modules/BreadthFirst.js"></script>
   <script type="text/javascript" src="../src/modules/BiAStar.js"></script>
