--- a/visual/index.html
+++ b/visual/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <title>PathFinding.js</title>
 
-    <!--if lt IE 9>
-    <script type="text/javascript">
-        window.location = './notsupported.html';
-    </script> 
-    <![endif]-->
-
     <link rel="stylesheet" href="./main.css" />
     <link rel="stylesheet" href="./lib/themes/jquery.ui.all.css" />
 
     <script type="text/javascript" src="./lib/raphael-min.js"></script>
     <script type="text/javascript" src="./lib/jquery-1.6.4.min.js"></script>
+    <script type="text/javascript" src="./lib/modernizr.js"></script>
 
     <script type="text/javascript" src="./lib/ui/jquery.ui.core.min.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.widget.min.js"></script>
