mod: new filename for browser file

--- a/visual/index.html
+++ b/visual/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="./lib/ui/jquery.ui.accordion.min.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.slider.min.js"></script>
 
-    <script type="text/javascript" src="../build/PathFinding.min.js"></script>
+    <script type="text/javascript" src="../lib/pathfinding-browser.js"></script>
     <script type="text/javascript" src="./notification.js"></script>
     <script type="text/javascript" src="./grid.js"></script>
     <script type="text/javascript" src="./panel.js"></script>
