relabel control buttons to accurately reflect current functionality
Added "Walls" to show that Reset resets not the colored squares, but the walls.
Added "Search" because it looks weird if one button is bigger than the others.
Changed "Reset" to "Clear" to indicate that walls disappear, but the start and end positions are not moved.

--- a/visual/index.html
+++ b/visual/index.html
@@ -125,9 +125,9 @@
 
     <div id="play_panel" class="control_panel">
       <!--<div id="speed_slider"></div>-->
-      <button id="start_button">Start</button>
-      <button id="stop_button">Stop</button>
-      <button id="reset_button">Reset</button>
+      <button id="start_button">Start Search</button>
+      <button id="stop_button">Stop Search</button>
+      <button id="reset_button">Clear Walls</button>
     </div>
 
     <div id="timer">
