improve grammar of instructions text

--- a/visual/index.html
+++ b/visual/index.html
@@ -33,11 +33,11 @@
         <h2 class="header_title">Instructions</h2>
         <span id="hide_instruction">hide</span>
       </header>
-      click on the <span class="white">white</span> grids and drag your mouse to draw obstacles. <br>
-      drag <span class="green">green</span> node to set start position. <br>
-      drag <span class="red">red</span> node to set end position. <br>
-      choose algorithm from right panel. <br>
-      click start button at the lower right corner to start the animation.
+      Click within the <span class="white">white</span> grid and drag your mouse to draw obstacles. <br>
+      Drag the <span class="green">green</span> node to set the start position. <br>
+      Drag the <span class="red">red</span> node to set the end position. <br>
+      Choose an algorithm from the right-hand panel. <br>
+      Click Start Search in the lower-right corner to start the animation.
     </div>
 
     <div id="algorithm_panel" class="control_panel">
