add: show path length on stats panel, closes #12

--- a/visual/index.html
+++ b/visual/index.html
@@ -145,8 +145,7 @@
       <button id="reset_button">Clear Walls</button>
     </div>
 
-    <div id="timer">
-    </div>
+    <div id="stats"></div>
 
     <footer>
       Project Hosted on <a href="http://github.com/qiao/PathFinding.js">Github</a>
