--- a/visual/index.html
+++ b/visual/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>PathFinding.js</title>
 
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./lib/themes/jquery.ui.all.css" />
 
     <script type="text/javascript" src="./lib/raphael-min.js"></script>
     <script type="text/javascript" src="./lib/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="./lib/modernizr.js"></script>
+    <script type="text/javascript" src="./lib/state-machine.min.js"></script>
+    <script type="text/javascript" src="./lib/async.min.js"></script>
 
     <script type="text/javascript" src="./lib/ui/jquery.ui.core.min.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.widget.min.js"></script>
@@ -18,17 +20,15 @@
     <script type="text/javascript" src="./lib/ui/jquery.ui.accordion.min.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.slider.min.js"></script>
 
+    <script type="text/javascript" src="./lib/es5-shim.min.js"></script>
+
     <script type="text/javascript" src="../lib/pathfinding-browser.js"></script>
-    <script type="text/javascript" src="./notification.js"></script>
-    <script type="text/javascript" src="./grid.js"></script>
-    <script type="text/javascript" src="./panel.js"></script>
     <script type="text/javascript" src="./main.js"></script>
   </head>
   <body>
-    <!-- TODO: info icon and text -->
     <div id="draw_area"></div>
 
-    <div id="help_panel" class="control_panel">
+    <div id="help_panel" class="panel">
       <header>
         <h2 class="header_title">Instructions</h2>
         <span id="hide_instruction">hide</span>
@@ -40,110 +40,112 @@
       Click Start Search in the lower-right corner to start the animation.
     </div>
 
-    <div id="algorithm_panel" class="control_panel">
-      <header><h2 class="header_title">Select Algorithm</h2></header>
+    <div id="right_column">
 
-      <!-- TODO: using jquery-ui's triangle image to replace radio button -->
-      <div class="accordion">
-        <h3 id="astar_header"><a href="#">A*</a></h3>
-        <div id="astar_section" class="finder_section">
-          <header class="option_header">
-            <h3>Heuristic</h3>
-          </header>
-          <div id="astar_heuristic" class="sub_options">
-            <input type="radio" name="astar_heuristic" value="manhattan" checked />
-            <label class="option_label">Manhattan</label> <br>
-            <input type="radio" name="astar_heuristic" value="euclidean"/>
-            <label class="option_label">Euclidean</label> <br>
-            <input type="radio" name="astar_heuristic" value="chebyshev"/>
-            <label class="option_label">Chebyshev</label> <br>
+      <div id="algorithm_panel" class="panel">
+        <header><h2 class="header_title">Select Algorithm</h2></header>
+
+        <div class="accordion">
+          <h3 id="astar_header"><a href="#">A*</a></h3>
+          <div id="astar_section" class="finder_section">
+            <header class="option_header">
+              <h3>Heuristic</h3>
+            </header>
+            <div id="astar_heuristic" class="sub_options">
+              <input type="radio" name="astar_heuristic" value="manhattan" checked />
+              <label class="option_label">Manhattan</label> <br>
+              <input type="radio" name="astar_heuristic" value="euclidean"/>
+              <label class="option_label">Euclidean</label> <br>
+              <input type="radio" name="astar_heuristic" value="chebyshev"/>
+              <label class="option_label">Chebyshev</label> <br>
+            </div>
+
+            <header class="option_header">
+              <h3>Options</h3>
+            </header>
+            <div class="optional sub_options">
+              <input type="checkbox" class="allow_diagonal" checked>
+              <label class="option_label">Allow Diagonal</label> <br>
+              <input type="checkbox" class="bi-directional">
+              <label class="option_label">Bi-directional</label> <br>
+            </div>
           </div>
 
-          <header class="option_header">
-            <h3>Options</h3>
-          </header>
-          <div class="optional sub_options">
-            <input type="checkbox" class="allow_diagonal" checked>
-            <label class="option_label">Allow Diagonal</label> <br>
-            <input type="checkbox" class="bi-directional">
-            <label class="option_label">Bi-directional</label> <br>
+          <h3 id="breadthfirst_header"><a href="#">Breadth-First-Search</a></h3>
+          <div id="breadthfirst_section" class="finder_section">
+            <header class="option_header">
+              <h3>Options</h3>
+            </header>
+            <div class="optional sub_options">
+              <input type="checkbox" class="allow_diagonal" checked>
+              <label class="option_label">Allow Diagonal</label> <br>
+              <input type="checkbox" class="bi-directional">
+              <label class="option_label">Bi-directional</label> <br>
+            </div>
+          </div>
+
+          <h3 id="bestfirst_header"><a href="#">Best-First-Search</a></h3>
+          <div id="bestfirst_section" class="finder_section">
+            <header class="option_header">
+              <h3>Heuristic</h3>
+            </header>
+            <div id="bestfirst_heuristic" class="sub_options">
+              <input type="radio" name="bestfirst_heuristic" value="manhattan" checked />
+              <label class="option_label">Manhattan</label> <br>
+              <input type="radio" name="bestfirst_heuristic" value="euclidean"/>
+              <label class="option_label">Euclidean</label> <br>
+              <input type="radio" name="bestfirst_heuristic" value="chebyshev"/>
+              <label class="option_label">Chebyshev</label> <br>
+            </div>
+
+            <header class="option_header">
+              <h3>Options</h3>
+            </header>
+            <div class="optional sub_options">
+              <input type="checkbox" class="allow_diagonal" checked>
+              <label class="option_label">Allow Diagonal</label> <br>
+              <input type="checkbox" class="bi-directional">
+              <label class="option_label">Bi-directional</label> <br>
+            </div>
+          </div>
+
+          <h3 id="dijkstra_header"><a href="#">Dijkstra</a></h3>
+          <div id="dijkstra_section" class="finder_section">
+            <header class="option_header">
+              <h3>Options</h3>
+            </header>
+            <div class="optional sub_options">
+              <input type="checkbox" class="allow_diagonal" checked>
+              <label class="option_label">Allow Diagonal</label> <br>
+              <input type="checkbox" class="bi-directional">
+              <label class="option_label">Bi-directional</label> <br>
+            </div>
+          </div>
+
+          <h3 id="jump_point_header"><a href="#">Jump Point Search</a></h3>
+          <div id="jump_point_section" class="finder_section">
+            <header class="option_header">
+              <h3>Heuristic</h3>
+            </header>
+            <div id="jump_point_heuristic" class="sub_options">
+              <input type="radio" name="jump_point_heuristic" value="manhattan" checked />
+              <label class="option_label">Manhattan</label> <br>
+              <input type="radio" name="jump_point_heuristic" value="euclidean"/>
+              <label class="option_label">Euclidean</label> <br>
+              <input type="radio" name="jump_point_heuristic" value="chebyshev"/>
+              <label class="option_label">Chebyshev</label> <br>
+            </div>
           </div>
         </div>
+      </div><!-- #algorithm_panel -->
 
-        <h3 id="breadthfirst_header"><a href="#">Breadth-First-Search</a></h3>
-        <div id="breadthfirst_section" class="finder_section">
-          <header class="option_header">
-            <h3>Options</h3>
-          </header>
-          <div class="optional sub_options">
-            <input type="checkbox" class="allow_diagonal" checked>
-            <label class="option_label">Allow Diagonal</label> <br>
-            <input type="checkbox" class="bi-directional">
-            <label class="option_label">Bi-directional</label> <br>
-          </div>
-        </div>
-
-        <h3 id="bestfirst_header"><a href="#">Best-First-Search</a></h3>
-        <div id="bestfirst_section" class="finder_section">
-          <header class="option_header">
-            <h3>Heuristic</h3>
-          </header>
-          <div id="bestfirst_heuristic" class="sub_options">
-            <input type="radio" name="bestfirst_heuristic" value="manhattan" checked />
-            <label class="option_label">Manhattan</label> <br>
-            <input type="radio" name="bestfirst_heuristic" value="euclidean"/>
-            <label class="option_label">Euclidean</label> <br>
-            <input type="radio" name="bestfirst_heuristic" value="chebyshev"/>
-            <label class="option_label">Chebyshev</label> <br>
-          </div>
-
-          <header class="option_header">
-            <h3>Options</h3>
-          </header>
-          <div class="optional sub_options">
-            <input type="checkbox" class="allow_diagonal" checked>
-            <label class="option_label">Allow Diagonal</label> <br>
-            <input type="checkbox" class="bi-directional">
-            <label class="option_label">Bi-directional</label> <br>
-          </div>
-        </div>
-
-        <h3 id="dijkstra_header"><a href="#">Dijkstra</a></h3>
-        <div id="dijkstra_section" class="finder_section">
-          <header class="option_header">
-            <h3>Options</h3>
-          </header>
-          <div class="optional sub_options">
-            <input type="checkbox" class="allow_diagonal" checked>
-            <label class="option_label">Allow Diagonal</label> <br>
-            <input type="checkbox" class="bi-directional">
-            <label class="option_label">Bi-directional</label> <br>
-          </div>
-        </div>
-
-        <h3 id="jump_point_header"><a href="#">Jump Point Search</a></h3>
-        <div id="jump_point_section" class="finder_section">
-          <header class="option_header">
-            <h3>Heuristic</h3>
-          </header>
-          <div id="jump_point_heuristic" class="sub_options">
-            <input type="radio" name="jump_point_heuristic" value="manhattan" checked />
-            <label class="option_label">Manhattan</label> <br>
-            <input type="radio" name="jump_point_heuristic" value="euclidean"/>
-            <label class="option_label">Euclidean</label> <br>
-            <input type="radio" name="jump_point_heuristic" value="chebyshev"/>
-            <label class="option_label">Chebyshev</label> <br>
-          </div>
-        </div>
+      <div id="play_panel" class="panel">
+        <button id="start_button">Start Search</button>
+        <button id="stop_button">Stop Search</button>
+        <button id="reset_button">Clear Walls</button>
       </div>
-    </div>
 
-    <div id="play_panel" class="control_panel">
-      <!--<div id="speed_slider"></div>-->
-      <button id="start_button">Start Search</button>
-      <button id="stop_button">Stop Search</button>
-      <button id="reset_button">Clear Walls</button>
-    </div>
+    </div><!-- #right_panel -->
 
     <div id="stats"></div>
 
