add: stats for generating grid

--- a/visual/index.html
+++ b/visual/index.html
@@ -145,7 +145,7 @@
         <button id="reset_button">Clear Walls</button>
       </div>
 
-    </div><!-- #right_panel -->
+    </div><!-- #right_column -->
 
     <div id="stats"></div>
 
