mod: instructions panel dom id

--- a/visual/index.html
+++ b/visual/index.html
@@ -28,10 +28,10 @@
   <body>
     <div id="draw_area"></div>
 
-    <div id="help_panel" class="panel">
+    <div id="instructions_panel" class="panel">
       <header>
         <h2 class="header_title">Instructions</h2>
-        <span id="hide_instruction">hide</span>
+        <span id="hide_instructions">hide</span>
       </header>
       Click within the <span class="white">white</span> grid and drag your mouse to draw obstacles. <br>
       Drag the <span class="green">green</span> node to set the start position. <br>
